--- a/cda/templates/cda/agregar_fotos.html
+++ b/cda/templates/cda/agregar_fotos.html
@@ -366,6 +366,8 @@
         object-fit: contain;
         transition: transform 0.3s ease !important;/* ← AGREGAR transform */
         cursor: zoom-in; /* ← AGREGAR cursor */
+        transform: translateZ(0);
+        z-index: 1;
         
     
     /* Transiciones */
